# EMCMeeting

./: CMakeLists.txt  main.cpp
Interface/: CMakeLists.txt
Interface/AskHosterIPAndPortWindow/: AskHosterIPAndPortWindow.cpp  AskHosterIPAndPortWindow.hpp  CMakeLists.txt
Interface/ErrorWindow/: CMakeLists.txt  ErrorWindow.cpp  ErrorWindow.hpp
Interface/UI/: CMakeLists.txt  UI.cpp  UI.hpp
Interface/UI/Button/: Button.cpp  Button.hpp  CMakeLists.txt
Interface/UI/ImageRenderer/: CMakeLists.txt  ImageRenderer.cpp  ImageRenderer.hpp
Interface/UI/InputField/: CMakeLists.txt  InputField.cpp  InputField.hpp
Interface/UI/TextRenderer/: CMakeLists.txt  TextRenderer.cpp  TextRenderer.hpp
Interface/UserAskWhetherHosterWindow/: CMakeLists.txt  UserAskWhetherHosterWindow.cpp  UserAskWhetherHosterWindow.hpp
Interface/UserClientAskHosterIPAndPortWindow/: CMakeLists.txt  UserClientAskHosterIPAndPortWindow.cpp  UserClientAskHosterIPAndPortWindow.hpp
Interface/UserLoginWindow/: CMakeLists.txt  UserLoginWindow.cpp  UserLoginWindow.hpp
Interface/Window/: CMakeLists.txt  EMCWindow.cpp  EMCWindow.hpp  UserLoginWindow.cpp  UserLoginWindow.hpp  WindowBase.hpp
MeetingCore/: CMakeLists.txt  EMCMeeting.cpp  EMCMeeting.hpp
MeetingCore/Core/: CMakeLists.txt
MeetingCore/Core/AccountData/: AccountData.cpp  AccountData.hpp  CMakeLists.txt
MeetingCore/Core/AudioCapturer/: AudioCapturer.cpp  AudioCapturer.hpp  CMakeLists.txt
MeetingCore/Core/Client/: CMakeLists.txt  UserClient.cpp  UserClient.hpp
MeetingCore/Core/Hoster/: CMakeLists.txt
MeetingCore/Core/Hoster/DataCollector/: CMakeLists.txt  DataCollector.cpp  DataCollector.hpp
MeetingCore/Core/Hoster/HosterServer/: CMakeLists.txt  HosterServer.cpp  HosterServer.hpp
MeetingCore/Core/Hoster/UserDataBase/: CMakeLists.txt  UserDataBase.cpp  UserDataBase.hpp
MeetingCore/Core/MessagePackage/: CMakeLists.txt  MessagePackage.cpp  MessagePackage.hpp
MeetingCore/Core/NetWork/: CMakeLists.txt  Socket.hpp  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp
MeetingCore/Core/ScreenShot/: CMakeLists.txt  ScreenShot.cpp  ScreenShot.hpp
ToolBox/: Constant.hpp  ToolBox.hpp
unit_test/: Main.cpp
